--- a/module_ethernet/.project
+++ b/module_ethernet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>module_ethernet_board_support</name>
+	<name>module_ethernet</name>
 	<comment></comment>
 	<projects>
 	</projects>
