Rework lib_ethernet interface to have separate config, rx and tx paths.
Summary:
There is a streaming high priority, and an XC interface for the low
priority data and config.

Fixed a number of bugs including BUG 16310.

Improves the performance of the RT MII MAC such that it can meet timing
with the high priority queue enabled.

Reviewers: davel, andy

Reviewed By: davel

Differential Revision: http://phabricator.xmos.local:9000/D114

--- a/tests/test_etype_filter/Makefile
+++ b/tests/test_etype_filter/Makefile
@@ -22,12 +22,16 @@ SHARED_CODE = ../../include
 
 XTA_PRAGMA_INCLUDES = -I'../../xta'
 
-COMMON_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -I$(SHARED_CODE)
+COMMON_FLAGS  = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -I$(SHARED_CODE)
 COMMON_FLAGS += $(XTA_PRAGMA_INCLUDES)
 
 XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
-XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1
+XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
+
+ifeq ($(CONFIG),rt_rgmii)
+	TARGET = XS2-MODULE
+endif
 
 # The USED_MODULES variable lists other module used by the application.
 
