--- a/tests/test_time_rx_tx/Makefile
+++ b/tests/test_time_rx_tx/Makefile
@@ -1,11 +1,11 @@
-# The TARGET variable determines what target system the application is 
+# The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling.
 
 TARGET = XK-1A
 
 # The APP_NAME variable determines the name of the final .xe file. It should
-# not include the .xe postfix. If left blank the name will default to 
+# not include the .xe postfix. If left blank the name will default to
 # the project name
 
 APP_NAME =
@@ -27,8 +27,11 @@ COMMON_FLAGS += $(XTA_PRAGMA_INCLUDES)
 
 XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
-XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1
+XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
 
+ifeq ($(CONFIG),rt_rgmii)
+	TARGET = XS2-MODULE
+endif
 
 # The USED_MODULES variable lists other module used by the application.
 
