Added AVB traffic test. Fixed a number of bugs.
Summary:
Added a test for AVB traffic - with different number of streams and
different packet sizes.

Fixed bug with copying of high priority traffic.
Fixed bug with passing incorrect pointers in two places.
Ensure the RT version are running on 500Mhz parts so no need for xta
pragma to set core speed.

Reviewers: andy, davel

Differential Revision: http://phabricator.xmos.local:9000/D130

--- a/tests/test_etype_filter/Makefile
+++ b/tests/test_etype_filter/Makefile
@@ -29,6 +29,10 @@ XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
 XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
 
+ifeq ($(CONFIG),rt_mii)
+	TARGET = STARTKIT
+endif
+
 ifeq ($(CONFIG),rt_rgmii)
 	TARGET = XS2-MODULE
 endif
