--- a/tests/test_time_rx/Makefile
+++ b/tests/test_time_rx/Makefile
@@ -31,6 +31,13 @@ XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
 XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
 XCC_FLAGS_rt_hp_rgmii  = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -fno-xta-info
 
+ifeq ($(CONFIG),rt_mii)
+	TARGET = STARTKIT
+endif
+ifeq ($(CONFIG),rt_hp_mii)
+	TARGET = STARTKIT
+endif
+
 ifeq ($(CONFIG),rt_rgmii)
 	TARGET = XS2-MODULE
 endif
