--- a/tests/test_time_rx_tx/Makefile
+++ b/tests/test_time_rx_tx/Makefile
@@ -29,6 +29,10 @@ XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
 XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
 
+ifeq ($(CONFIG),rt_mii)
+	TARGET = STARTKIT
+endif
+
 ifeq ($(CONFIG),rt_rgmii)
 	TARGET = XS2-MODULE
 endif
