Optimised the linear MAC address lookup.
Summary:
Using word-aligned instead of byte by byte comparison. Now supports over
30 entries.

Get tests passing.

Reviewers: davel, andy

Reviewed By: andy

Differential Revision: http://phabricator.xmos.local:9000/D133

--- a/tests/test_rx/Makefile
+++ b/tests/test_rx/Makefile
@@ -28,6 +28,8 @@ XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
 XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
 XCC_FLAGS_rt_hp_rgmii  = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -fno-xta-info
 
+XCC_FLAGS_macaddr_filter.xc = $(XCC_FLAGS) -Wno-reinterpret-alignment
+
 ifeq ($(CONFIG),rt_mii)
 	TARGET = STARTKIT
 endif
