Fixed MII shaper, added shaper to RGMII.
Summary:
Had to separate out the HP and LP transmit buffers so that they don't
interfere with each other when the shaper is stopping the HP.

Reviewers: davel, andy

Reviewed By: andy

Differential Revision: http://phabricator.xmos.local:9000/D146

--- a/tests/test_time_rx_tx/Makefile
+++ b/tests/test_time_rx_tx/Makefile
@@ -24,7 +24,7 @@ COMMON_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -X
 
 XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
-XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -fno-xta-info
+XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES -fno-xta-info
 
 ifeq ($(CONFIG),rt_mii)
 	TARGET = STARTKIT
