Fix for BUG 16411 for RT MII.
Summary:
Also updated tests to match the checks now done in the MAC that the
correct interfaces and defines are used together for the streaming interfaces.

Reviewers: davel, andy

Reviewed By: andy

Differential Revision: http://phabricator.xmos.local:9000/D150

--- a/tests/test_time_rx_tx/Makefile
+++ b/tests/test_time_rx_tx/Makefile
@@ -23,14 +23,18 @@ SHARED_CODE = ../../include
 COMMON_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -I$(SHARED_CODE)
 
 XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0
+XCC_FLAGS_rt_hp_mii    = $(COMMON_FLAGS) -DRT=1 -DRGMII=0 -DETHERNET_SUPPORT_HP_QUEUES=1
 XCC_FLAGS_standard_mii = $(COMMON_FLAGS) -DRT=0 -DRGMII=0
-XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES -fno-xta-info
+XCC_FLAGS_rt_hp_rgmii  = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -fno-xta-info
 
 ifeq ($(CONFIG),rt_mii)
 	TARGET = STARTKIT
 endif
+ifeq ($(CONFIG),rt_hp_mii)
+	TARGET = STARTKIT
+endif
 
-ifeq ($(CONFIG),rt_rgmii)
+ifeq ($(CONFIG),rt_hp_rgmii)
 	TARGET = XS2-MODULE
 endif
 
