Fixes for the tests to use new board.
Reviewers: andy

Reviewed By: andy

Differential Revision: http://phabricator.xmos.local:9000/D170

--- a/tests/test_etype_filter/Makefile
+++ b/tests/test_etype_filter/Makefile
@@ -31,7 +31,7 @@ ifeq ($(CONFIG),rt_mii)
 endif
 
 ifeq ($(CONFIG),rt_rgmii)
-	TARGET = XS2-MODULE
+	TARGET = XS2-BFB
 endif
 
 # The USED_MODULES variable lists other module used by the application.
