--- a/tests/test_time_rx_tx/Makefile
+++ b/tests/test_time_rx_tx/Makefile
@@ -35,7 +35,7 @@ ifeq ($(CONFIG),rt_hp_mii)
 endif
 
 ifeq ($(CONFIG),rt_hp_rgmii)
-	TARGET = XS2-MODULE
+	TARGET = XS2-BFB
 endif
 
 # The USED_MODULES variable lists other module used by the application.
