--- a/tests/test_time_tx/Makefile
+++ b/tests/test_time_tx/Makefile
@@ -36,11 +36,11 @@ ifeq ($(CONFIG),rt_hp_mii)
 endif
 
 ifeq ($(CONFIG),rt_rgmii)
-	TARGET = XS2-MODULE
+	TARGET = XS2-BFB
 endif
 
 ifeq ($(CONFIG),rt_hp_rgmii)
-	TARGET = XS2-MODULE
+	TARGET = XS2-BFB
 endif
 
 # The USED_MODULES variable lists other module used by the application.
