Make sure RGMII #define is set in application Makefile
This is required by the library to set the client 
buffering appropriately for Gigabit vs 100 Mbit

--- a/examples/AN00199_gigabit_ethernet_demo/Makefile
+++ b/examples/AN00199_gigabit_ethernet_demo/Makefile
@@ -18,7 +18,7 @@ APP_NAME =
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
 
-XCC_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE
+XCC_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -DRGMII=1
 
 XCC_FLAGS_icmp.xc = $(XCC_FLAGS) -Wno-reinterpret-alignment
 
