--- a/examples/AN00241_gigabit_ethernet_demo_slicekit/Makefile
+++ b/examples/AN00241_gigabit_ethernet_demo_slicekit/Makefile
@@ -1,8 +1,7 @@
-# The TARGET variable determines what target system the application is 
-# compiled for. It either refers to an XN file in the source directories
-# or a valid argument for the --target option when compiling.
-
-TARGET = SLICEKIT-ETH1
+# Do not build for XCOREAI
+ifeq ($(XCOREAI),1)
+$(error XCOREAI is not supported in this example)
+endif
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to 
@@ -18,9 +17,22 @@ APP_NAME =
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
 
-XCC_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -DRGMII=1
+XCC_FLAGS_xs1 = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -DRGMII=1
 
-XCC_FLAGS_icmp.xc = $(XCC_FLAGS) -Wno-reinterpret-alignment
+XCC_FLAGS_icmp_xs1 = $(XCC_FLAGS) -Wno-reinterpret-alignment
+
+XCC_FLAGS_xs2 = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -DRGMII=1
+
+XCC_FLAGS_icmp_xs2 = $(XCC_FLAGS) -Wno-reinterpret-alignment
+
+# The TARGET variable determines what target system the application is
+# compiled for. It either refers to an XN file in the source directories
+# or a valid argument for the --target option when compiling.
+ifeq ($(findstring xs1, $(CONFIG)), xs1)
+  TARGET = SLICEKIT-ETH1
+else ifeq ($(findstring xs2, $(CONFIG)), xs2)
+  TARGET = XCORE-200-EXPLORER
+endif
 
 # The USED_MODULES variable lists other module used by the application.
 
