--- a/examples/app_mii_demo/Makefile
+++ b/examples/app_mii_demo/Makefile
@@ -1,3 +1,8 @@
+# Do not build for XCOREAI
+ifeq ($(XCOREAI),1)
+$(error XCOREAI is not supported in this example)
+endif
+
 # The TARGET variable determines what target system the application is 
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling.
@@ -18,9 +23,18 @@ APP_NAME =
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
 
-XCC_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE
+XCC_FLAGS_xs1 = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE
+XCC_FLAGS_icmp_xs1 = $(XCC_FLAGS) -Wno-reinterpret-alignment
 
-XCC_FLAGS_icmp.xc = $(XCC_FLAGS) -Wno-reinterpret-alignment
+XCC_FLAGS_xs2 = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILEs
+XCC_FLAGS_icmp_xs2 = $(XCC_FLAGS) -Wno-reinterpret-alignment
+
+ifeq ($(findstring xs1, $(CONFIG)), xs1)
+  TARGET = SLICEKIT-L16
+
+else ifeq ($(findstring xs2, $(CONFIG)), xs2)
+  TARGET = XCORE-200-EXPLORER
+endif
 
 # The USED_MODULES variable lists other module used by the application.
 
