Add other architectures

--- a/tests/test_rx_queues/Makefile
+++ b/tests/test_rx_queues/Makefile
@@ -26,15 +26,17 @@ SHARED_CODE = ../../include
 
 COMMON_FLAGS = -g -report -DDEBUG_PRINT_ENABLE -save-temps -Os -Xmapper --map -Xmapper MAPFILE -I$(SHARED_CODE)
 
-XCC_FLAGS_rt_mii       = $(COMMON_FLAGS) -DRT=1 -DRGMII=0 -DETHERNET_SUPPORT_HP_QUEUES=1
-XCC_FLAGS_rt_rgmii     = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -fno-xta-info
+XCC_FLAGS_rt_mii_xs1    = $(COMMON_FLAGS) -DRT=1 -DRGMII=0 -DETHERNET_SUPPORT_HP_QUEUES=1
+XCC_FLAGS_rt_mii_xs2    = $(COMMON_FLAGS) -DRT=1 -DRGMII=0 -DETHERNET_SUPPORT_HP_QUEUES=1
 
-ifeq ($(CONFIG),rt_mii)
-	TARGET = STARTKIT
+XCC_FLAGS_rt_rgmii_xs2  = $(COMMON_FLAGS) -DRT=0 -DRGMII=1 -DETHERNET_SUPPORT_HP_QUEUES=1 -fno-xta-info
+
+ifeq ($(findstring xs1, $(CONFIG)), xs1)
+  TARGET = STARTKIT
 endif
 
-ifeq ($(CONFIG),rt_rgmii)
-	TARGET = XCORE-200-EXPLORER
+ifeq ($(findstring xs2, $(CONFIG)), xs1)
+  TARGET = XCORE-200-EXPLORER
 endif
 
 # The USED_MODULES variable lists other module used by the application.
