--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,9 @@
 # pip-install this one as editable using this repository's setup.py file.  The
 # same modules should appear in the setup.py list as given below.
 
-flake8==3.8.3
+flake8==7.0.0
+pytest==8.2.2
+pytest-xdist==3.6.1
 
 # Development dependencies
 #
@@ -32,4 +34,6 @@ flake8==3.8.3
 # If this repository uses the setup functionality (e.g., script entry points)
 # of its own setup.py file, then this list must include an entry for that
 # setup.py file, e.g., '-e .' or '-e ./python' (without the quotes).
+
+git+ssh://git@github.com/xmos/test_support.git@v2.0.0#egg=test_support
 -e ./python
