Test_tx cmake build & add to Jenkins

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(lib_ethernet_tests)
 add_subdirectory(app_dummy)
+add_subdirectory(test_tx)
