ensure all (working) tests built and run

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,3 +5,5 @@ project(lib_ethernet_tests)
 add_subdirectory(test_tx)
 add_subdirectory(test_rx)
 add_subdirectory(test_link_status)
+add_subdirectory(test_appdata)
+add_subdirectory(test_avb_traffic)
