Working test_etype_filter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(test_rx)
 add_subdirectory(test_link_status)
 add_subdirectory(test_appdata)
 add_subdirectory(test_avb_traffic)
+add_subdirectory(test_etype_filter)
