Add test_rx_backpressure build

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(test_link_status)
 add_subdirectory(test_appdata)
 add_subdirectory(test_avb_traffic)
 add_subdirectory(test_etype_filter)
+add_subdirectory(test_rx_backpressure)
