Fix rx test and copyright

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(test_appdata)
 add_subdirectory(test_avb_traffic)
 add_subdirectory(test_etype_filter)
 add_subdirectory(test_rx_backpressure)
+add_subdirectory(test_shaper)
