--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory(test_avb_traffic)
 add_subdirectory(test_etype_filter)
 add_subdirectory(test_rx_backpressure)
 add_subdirectory(test_shaper)
+add_subdirectory(test_time_rx)
+add_subdirectory(test_timestamp_tx)
