--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(test_timestamp_tx)
 add_subdirectory(test_time_tx)
 add_subdirectory(test_vlan_strip)
 add_subdirectory(test_speed_change)
+add_subdirectory(test_rx_queues)
