Test for xs3 architecture

--- a/tests/test_tx/CMakeLists.txt
+++ b/tests/test_tx/CMakeLists.txt
@@ -1,16 +1,13 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(test_tx)
 
-set(APP_HW_TARGET           XCORE-200-EXPLORER)
+include(../helpers.cmake)
 
 set(APP_PCA_ENABLE ON)
 
 include(../test_deps.cmake)
 
 file(GLOB_RECURSE SOURCES_XC RELATIVE  ${CMAKE_CURRENT_LIST_DIR} "src/*.xc")
-set(APP_XC_SRCS             ${SOURCES_XC})
-set(APP_INCLUDES            ../include src)
 
 
 set(COMPILER_FLAGS_COMMON   -g
@@ -21,43 +18,62 @@ set(COMPILER_FLAGS_COMMON   -g
 set(XMOS_SANDBOX_DIR                    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
 file(READ ${CMAKE_CURRENT_LIST_DIR}/test_params.json JSON_CONTENT)
-string(JSON PROFILES_LIST GET ${JSON_CONTENT} PROFILES)
-string(JSON NUM_PROFILES LENGTH ${PROFILES_LIST})
-math(EXPR NUM_PROFILES "${NUM_PROFILES} - 1")
+
+get_json_list(${JSON_CONTENT} PROFILES profile_list)
+
+set(done_configs "")
+foreach(PROFILE ${profile_list})
+    get_json_list(${PROFILE} arch arch_list) # Get archs to build for, for this particular profile
+    foreach(ARCH ${arch_list})
+        if(ARCH STREQUAL "xs3")
+            set(target "XK-EVK-XU316")
+        elseif(ARCH STREQUAL "xs2")
+            set(target "XCORE-200-EXPLORER")
+        endif()
+        #string(JSON PROFILE GET ${PROFILES_LIST} ${i})
+        string(JSON phy GET ${PROFILE} phy)
+        string(JSON clk GET ${PROFILE} clk)
+        string(JSON mac GET ${PROFILE} mac)
+        set(config "${mac}_${phy}_${ARCH}")
+        message(STATUS "Building cfg_name: ${config}")
+
+        list (FIND done_configs ${config} _index)
+
+        if(${_index} EQUAL -1) # Only build if it is a new config
+            list(APPEND done_configs ${config})
+            project(test_tx)
+            set(APP_HW_TARGET           ${target})
+            set(APP_XC_SRCS             ${SOURCES_XC})
+            set(APP_INCLUDES            ../include src)
+
+            set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
+
+            string(FIND "${PROFILE}" "rt" position)
+            if(position GREATER -1)
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRT=0)
+            endif()
+
+            string(FIND "${PROFILE}" "hp" position)
+            if(position GREATER -1)
+                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=0)
+            endif()
+
+            if(${phy} MATCHES "rgmii")
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=1)
+            else()
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=0)
+            endif()
+
+            XMOS_REGISTER_APP()
+            unset(APP_COMPILER_FLAGS_${config})
+        endif() # if(${_index} equal -1) # New config
+
+    endforeach() # foreach(arch ${arch_list})
+    unset(arch_list)
+endforeach() # foreach(PROFILE ${profile_list})
 
 
-foreach(i RANGE 0 ${NUM_PROFILES})
-    string(JSON PROFILE GET ${PROFILES_LIST} ${i})
-    string(JSON phy GET ${PROFILE} phy)
-    string(JSON clk GET ${PROFILE} clk)
-    string(JSON mac GET ${PROFILE} mac)
-    string(JSON arch GET ${PROFILE} arch)
-    set(config "${mac}_${phy}")
-    message(STATUS "Building cfg_name: ${config}")
-
-    set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
-
-    string(FIND "${PROFILE}" "rt" position)
-    if(position GREATER -1)
-        list(APPEND APP_COMPILER_FLAGS_${config} -DRT=1)
-    else()
-        list(APPEND APP_COMPILER_FLAGS_${config} -DRT=0)
-    endif()
-
-    string(FIND "${PROFILE}" "hp" position)
-    if(position GREATER -1)
-        list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=1)
-    else()
-        list(APPEND APP_COMPILER_FLAGS_${config} -DETHERNET_SUPPORT_HP_QUEUES=0)
-    endif()
-
-    if(${phy} MATCHES "rgmii")
-        list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=1)
-    else()
-        list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=0)
-    endif()
-
-
-endforeach()
-
-XMOS_REGISTER_APP()
