--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,5 @@ add_subdirectory(test_time_tx)
 add_subdirectory(test_vlan_strip)
 add_subdirectory(test_speed_change)
 add_subdirectory(test_rx_queues)
+add_subdirectory(test_check_ifg_wait)
+
