Support all 4/1b permutations in build/sim

--- a/examples/test_rmii_rt/CMakeLists.txt
+++ b/examples/test_rmii_rt/CMakeLists.txt
@@ -11,11 +11,14 @@ set(APP_PCA_ENABLE          ON)
 set(COMPILER_FLAGS_COMMON   -g
                             -report
                             -DDEBUG_PRINT_ENABLE=1
-                            -DETHERNET_SUPPORT_HP_QUEUES=1)
+                            -DETHERNET_SUPPORT_HP_QUEUES=1
+                            )
 
-set(APP_COMPILER_FLAGS          ${COMPILER_FLAGS_COMMON})
-set(APP_COMPILER_FLAGS_icmp.xc  ${COMPILER_FLAGS_COMMON}
-                                -Wno-reinterpret-alignment)
+
+set(APP_COMPILER_FLAGS_tx4b_rx4b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=4)
+set(APP_COMPILER_FLAGS_tx1b_rx4b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=4)
+set(APP_COMPILER_FLAGS_tx4b_rx1b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=4 -DRX_WIDTH=1)
+set(APP_COMPILER_FLAGS_tx1b_rx1b    ${COMPILER_FLAGS_COMMON} -DTX_WIDTH=1 -DRX_WIDTH=1)
 
 set(APP_XSCOPE_SRCS         src/config.xscope)
 
