Extend test_timestamp_tx to test rmii configs

--- a/tests/test_timestamp_tx/CMakeLists.txt
+++ b/tests/test_timestamp_tx/CMakeLists.txt
@@ -28,10 +28,15 @@ foreach(PROFILE ${profile_list})
     get_json_list(${PROFILE} arch arch_list) # Get archs to build for, for this particular profile
     foreach(arch ${arch_list})
         string(JSON phy GET ${PROFILE} phy)
-        string(JSON clk GET ${PROFILE} clk)
         string(JSON mac GET ${PROFILE} mac)
 
-        set(config "${mac}_${phy}_${arch}")
+        set(config "${mac}_${phy}")
+        string(FIND ${PROFILE} "tx_width" tx_width_found)
+        if(tx_width_found GREATER -1)
+            string(JSON tx_width GET ${PROFILE} tx_width)
+            set(config "${config}_tx${tx_width}")
+        endif()
+        set(config "${config}_${arch}")
 
         list (FIND done_configs ${config} _index)
         if(${_index} EQUAL -1) # Only build if it is a new config
@@ -41,6 +46,8 @@ foreach(PROFILE ${profile_list})
             set_app_hw_target(arch)
 
             set(APP_COMPILER_FLAGS_${config}    ${COMPILER_FLAGS_COMMON})
+
+            set_app_tx_width(tx_width)
 
             string(FIND "${PROFILE}" "rt" position)
             if(position GREATER -1)
@@ -58,9 +65,12 @@ foreach(PROFILE ${profile_list})
 
             if(${phy} MATCHES "rgmii")
                 list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=1)
-            else()
-                list(APPEND APP_COMPILER_FLAGS_${config} -DRGMII=0)
+            elseif(${phy} MATCHES "rmii")
+                list(APPEND APP_COMPILER_FLAGS_${config} -DRMII=1)
+            elseif(${phy} MATCHES "mii")
+                list(APPEND APP_COMPILER_FLAGS_${config} -DMII=1)
             endif()
+
             XMOS_REGISTER_APP()
             unset(APP_COMPILER_FLAGS_${config})
         endif() # if(${_index} equal -1) # New config
